# legged_wbc

./: CMakeLists.txt  package.xml
config/: go1-wbc-config.yaml  go2-wbc-config.yaml  wbc-config.yaml
include/legged_wbc/: HierarchicalWbc.h  LeggedModel.h  LeggedState.h  Lie.h  ModelHelperFunctions.h  Rotation.hpp  RotationDerivativesTransforms.h  Task.h  Types.h  WbcBase.h  WeightedWbc.h
src/: HierarchicalWbc.cpp  LeggedModel.cpp  LeggedState.cpp  WbcBase.cpp  WeightedWbc.cpp
test/: LeggedModel_test.cpp  LeggedState_test.cpp  Lie_test.cpp  Rotation_test.cpp  WeightedWbc_test.cpp
urdf/: go1.urdf
