<?xml version="1.0"?>
<package format="2">
    <name>legged_wbc</name>
    <version>0.0.0</version>
    <description>Whole body control</description>
    <maintainer email="rkzdtc@gmail.com">Kunzhao Ren</maintainer>

    <license>BSD</license>
    <author email="rkzdtc@gmail.com">Kunzhao Ren</author>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>cmake_clang_tools</build_depend>
    
    <depend>roscpp</depend>
    <depend>qpoases_catkin</depend>
    <depend>pinocchio</depend>
</package>
