<?xml version="1.0"?>
<package format="2">
    <name>legged_wbc</name>
    <version>0.0.0</version>
    <description>Whole body control</description>
    <maintainer email="rkzdtc@gmail.com">Kunzhao Ren</maintainer>
    <license>BSD</license>

    <!-- <buildtool_depend>catkin</buildtool_depend> -->
    <buildtool_depend>ament_cmake</buildtool_depend>
    
    <depend>pinocchio</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
